--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Liv Birks's CV</title>
+        <title>Olivia Birks's CV</title>
         <link rel="stylesheet" href="style.css">
     </head>
+    <body>
+        <header>
+            <h1>Olivia Birks</h1>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#links">Links</a></li>
+                <li><a href="#proffessional-summary">Professional Summary</a></li>
+                <li><a href="#work-experience">Work Experience</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#awards">Awards and Accolades</a></li>
+            </ul>
+        </nav>
+    </body>
 </html>
