commented out the nav for now and added sub sections and professional summary

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Olivia Birks's CV</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <h1>Olivia Birks</h1>
-        </header>
-        <nav>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Olivia Birks's CV</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <h1>Olivia Birks</h1>
+    </header>
+    <!-- <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#links">Links</a></li>
@@ -21,6 +23,26 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#awards">Awards and Accolades</a></li>
             </ul>
-        </nav>
-    </body>
+        </nav> -->
+    <main>
+        <h2>Links</h2>
+        <h2>Professional Summary</h2>
+        <p>A customer facing engineer seeking a technical role to leverage and expand my skills and knowledge. Currently
+            a Senior Customer Success Engineer at SafetyCulture, I bring approximately 3 years of experience in a large
+            B2B SaaS environment, combining technical acumen with a customer-centric approach. My role involves building
+            bespoke integration solutions and ensuring success for major enterprise clients. I utilise my knowledge of
+            API and integrations, software development practices, and apply a customer success mindset to foster strong
+            customer relationships while delivering technical solutions.</p>
+        <h2>Work Experience</h2>
+        <h2>Skills</h2>
+        <h2>Education</h2>
+        <h2>Projects</h2>
+        <h2>Awards and Accolades</h2>
+    </main>
+
+    <footer>
+        <p>Footer Information &copy; 2024</p>
+    </footer>
+</body>
+
 </html>
